--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     </head>
     <body>
         <h1>This picture is in shapla chottor and infron of the Bangladesh Central Bank</h1>
+        <img src="my_image.jpg" alt="My photo">
     </body>
 </html>
